<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@drawable/background_dialog"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_rate" />

        <com.galaxy.gallery.j7gallery.fonts.CustomTextViewClock2017
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/rate_app"
            android:textColor="@color/colorOrange"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/rate"
            android:textColor="@color/colorText"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center|right"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <com.galaxy.gallery.j7gallery.fonts.CustomTextViewClock2017
            android:id="@+id/tv_not_now"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/notnow"
            android:textColor="@color/colorOrange"
            android:textSize="14sp" />

        <com.galaxy.gallery.j7gallery.fonts.CustomTextViewClock2017
            android:id="@+id/tv_rate_app"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/ratenow"
            android:textColor="@color/colorOrange"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>